add_library(homeassistant homeassistant.cc)
target_compile_features(homeassistant PRIVATE cxx_std_23)
target_link_libraries(homeassistant PUBLIC lwipxx_mqtt jagspico_util pico_unique_id)
target_include_directories(homeassistant PUBLIC include)

add_pico_executable(homeassistant_printf_test test.cc) 
target_link_libraries(homeassistant_printf_test PRIVATE homeassistant)
target_compile_options(homeassistant_printf_test PRIVATE -DUSE_PICO_PRINTF=1)

add_pico_executable(homeassistant_ssprintf_test test.cc) 
target_link_libraries(homeassistant_ssprintf_test PRIVATE homeassistant)
target_compile_options(homeassistant_ssprintf_test PRIVATE -DUSE_SSPRINTF=1)

add_pico_executable(homeassistant_osstream_test test.cc) 
target_link_libraries(homeassistant_osstream_test PRIVATE homeassistant)
target_compile_options(homeassistant_osstream_test PRIVATE)
